# rust_web_api

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: quick_dev.rs
src/: error.rs  lib.rs  main.rs
src/routes/: hello_world.rs  mod.rs  user_routes.rs
