[package]
name = "rust_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
cargo-watch = "8.4.1"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }

[dev-dependencies]
anyhow="1.0.75"
httpc-test = "0.1.7"
cargo-watch = "8.4.1"
